k8s/src/bases/pihole/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
spec:
  serviceName: pihole
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - name: svc-53-udp
              containerPort: 53
              protocol: UDP
            - name: svc-53-tcp
              containerPort: 53
              protocol: TCP
            - name: svc-ui
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "150m"
            requests:
              memory: "200Mi"
              cpu: "150m"
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-pvc
  volumeClaimTemplates:
    - metadata:
        name: pihole-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
